Fixed dependencies problems